updated style file to fix messed up error on mobile version again

--- a/styles/style.css
+++ b/styles/style.css
@@ -79,7 +79,7 @@
   /* Headline section */
   .headline {
     width: 100vw;
-    height: 78vh;
+    min-height: 78vh;
     background-image: url(../images/header-illsutration-mobile@2x.png);
     background-size: cover;
     background-repeat: no-repeat;
@@ -162,7 +162,7 @@
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin-top: 140px;
+    margin-top: 60px;
   }
 
   .r_works .title {
@@ -713,8 +713,7 @@
   .headline {
     background-image: url(../images/Header-llustration-desktop.png);
     background-size: cover;
-    min-height: 0;
-    height: 140vh;
+    min-height: 140vh;
     margin-bottom: 100px;
     display: flex;
     padding-top: 16%;
